see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Dec-2010 Christophe Demko
 # [#23589] mod_latestnews ignores "show featured" setting

10-Dec-2010 Jean-Marie Simonet
 # [#23710] Improve fieldset input CSS definition for RTL language. Thanks Itzik and Andrea.
 # [#23709] add new article - missing RTL css definition for editor article button. Thanks Itzik and Andrea.
 # [#23711] Allowing default text to be translatable in form fields. Thanks Christophe
 
09-Dec-2010 Mark Dexter
# [#23695] Apply patch 23034 to contacts and newsfeeds
# [#23690] Fullpath disclosure in template error files

09-Dec-2010 Christophe Demko
 # [#22725] Update Manager Fails (Dennis Hermacki)
 # [#23700] Lang switcher is redirecting users to home page depending of languages when lang filter is off + SEF plugin is doing some work when SEF is OFF
 # [#23702] Javascript out of sync between normal and uncompressed file (Rouven Weßling)

09-Dec-2010 Jean-Marie Simonet
[#23671] some Chinese glyphs break SEF when using unicode urls. Thanks Mark.

08-Dec-2010 Jean-Marie Simonet
 # [#23677] RTL header issue in Bluestork. Thanks Andrea.

08-Dec-2010 Mark Dexter
# [#21207] Joomla 1.6 Beta 6 - not assigned to groups when via LDAP login. (Elin Waring)
# [#23441] *Fatal error when saving a weblink from the new icon in a weblink category list
# [#22992] Unpublished articles are still shown in user profile
# [#22958] CSS class and id changes (cont'd) (Andrea Tarr)
# [#22955] Upgrading plugin using method="upgrade" does not remove files omitted from xml (Sam Moffatt)

07-Dec-2010 Mark Dexter
# [#22957] Upgrading a template that uses method="upgrade" removes manually added files