@@ -22,6 +22,14 @@
 		</field>
 
 		<field
+			name="guest_usergroup"
+			type="usergroup"
+			default="1"
+			label="COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL"
+			description="COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_DESC">
+		</field>
+
+		<field
 			name="useractivation"
 			type="list"
 			default="1"
