@@ -15,6 +15,8 @@ COM_USERS_CONFIG_FIELD_ALLOWREGISTRATION_DESC="If set to Yes, new Users allowed 
 COM_USERS_CONFIG_FIELD_ALLOWREGISTRATION_LABEL="Allow User Registration"
 COM_USERS_CONFIG_FIELD_FRONTEND_USERPARAMS_DESC="If set to Show, Users will be able to select their language, editor, and Help Site preferences on their details screen when logged into the frontend."
 COM_USERS_CONFIG_FIELD_FRONTEND_USERPARAMS_LABEL="Frontend User Parameters"
+COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_DESC="The default Group that will be applied to guest (not logged in) Users."
+COM_USERS_CONFIG_FIELD_GUEST_USER_GROUP_LABEL="Guest User Group"
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_DESC="The default group that will be applied to New Users Registering via the frontend."
 COM_USERS_CONFIG_FIELD_NEW_USER_TYPE_LABEL="New User Registration Group"
 COM_USERS_CONFIG_FIELD_SUBJECT_PREFIX_LABEL="Subject Prefix"
