@@ -205,38 +205,47 @@ class JAccess
 	{
 		static $results = array();
 
-		// Get the database connection object.
-		$db = JFactory::getDbo();
-
 		// Creates a simple unique string for each parameter combination:
 		$storeId = $userId.':'.(int) $recursive;
 
-		if (!isset($results[$storeId])) {
-			// Build the database query to get the rules for the asset.
-			$query	= $db->getQuery(true);
-			$query->select($recursive ? 'b.id' : 'a.id');
-			$query->from('#__user_usergroup_map AS map');
-			$query->where('map.user_id = '.(int) $userId);
-			$query->leftJoin('#__usergroups AS a ON a.id = map.group_id');
-
-			// If we want the rules cascading up to the global asset node we need a self-join.
-			if ($recursive) {
-				$query->leftJoin('#__usergroups AS b ON b.lft <= a.lft AND b.rgt >= a.rgt');
-			}
-
-			// Execute the query and load the rules from the result.
-			$db->setQuery($query);
-			$result	= $db->loadResultArray();
-
-			// Clean up any NULL or duplicate values, just in case
-			JArrayHelper::toInteger($result);
-
-			if (empty($result)) {
-				$result = array('1');
-			}
-			else {
-				$result = array_unique($result);
-			}
+		if (!isset($results[$storeId]))
+		{
+			// Guest user
+			if (empty($userId))
+			{
+				$result = array(JComponentHelper::getParams('com_users')->get('guest_usergroup', 1));
+ 			}
+ 			// Registered user
+ 			else
+ 			{			
+				$db = JFactory::getDbo();
+				
+				// Build the database query to get the rules for the asset.
+				$query	= $db->getQuery(true);
+				$query->select($recursive ? 'b.id' : 'a.id');
+				$query->from('#__user_usergroup_map AS map');
+				$query->where('map.user_id = '.(int) $userId);
+				$query->leftJoin('#__usergroups AS a ON a.id = map.group_id');
+	
+				// If we want the rules cascading up to the global asset node we need a self-join.
+				if ($recursive) {
+					$query->leftJoin('#__usergroups AS b ON b.lft <= a.lft AND b.rgt >= a.rgt');
+				}
+	
+				// Execute the query and load the rules from the result.
+				$db->setQuery($query);
+				$result	= $db->loadResultArray();
+	
+				// Clean up any NULL or duplicate values, just in case
+				JArrayHelper::toInteger($result);
+	
+				if (empty($result)) {
+					$result = array('1');
+				}
+				else {
+					$result = array_unique($result);
+				}
+ 			}
 
 			$results[$storeId] = $result;
 		}
